# cerebro

./: .dockerignore  .env.cli.example  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.production.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-vector.txt  requirements.txt  start.sh
.github/: dependabot.yml  secrets.template.env
alembic/: env.py
config/: __init__.py  base.py  development.py  production.py  staging.py  testing.py
docker/: Dockerfile.masr  init.sql
docs/: CLI.md  agent-flowcharts.md  api-documentation.md  backup-recovery.md  cli-usage-guide.md  configuration-reference.md  data-flow-diagrams.md  database-architecture.md  deployment-monitoring-guide.md  development-setup-guide.md  error-codes.md  integration-testing-guide.md  langgraph-integration.md  multi-agent-architecture.md  performance-tuning.md  report-generation-system.md  repository-pattern-guide.md  security-authentication.md  security-implementation.md  system-architecture-diagrams.md  temporal-workflow-orchestration.md  troubleshooting.md  websocket-realtime-updates.md  workflow-sequence-diagrams.md
examples/: game_theory_cooperative_ai_paper.md  hierarchical_agent_example.py  masr_supervisor_integration_test.py  projects.yaml  quantum_computing_research_paper.md  sample_research_output.json  sample_research_report.md  test_dynamic_config.py
k8s/: configmap.yaml  deployment-api.yaml  deployment-worker.yaml  external-secrets.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  secrets.yaml  service.yaml  serviceaccount.yaml
landing_page/: README.md  index.html
plans/: CHANGELOG_LANGGRAPH.md  PLAN_DATABASE_LAYER.md  PLAN_SECURITY_AUTH.md  SECURITY_AUTH_IMPLEMENTATION.md
scripts/: run_e2e_tests.sh  run_integration_tests.sh  setup-github-protection.sh  setup-python-env.sh  smoke_test.sh  verify-cicd-setup.sh
src/: __init__.py
tests/: __init__.py  conftest.py  test_ab_testing_dashboard.py  test_ab_testing_integration.py  test_ab_testing_math.py  test_ab_testing_optimizer_integration.py  test_agent_api.py  test_agent_factory.py  test_agent_query_metrics_api.py  test_agents_base.py  test_api.py  test_api_correctness_middleware.py  test_api_report_responses.py  test_api_reports.py  test_api_reports_validation.py  test_auth_jwt.py  test_cli.py  test_comparative_analysis_agent.py  test_comparative_analysis_agent_outputs.py  test_comparative_insight_synthesizer.py  test_comparative_similarity_analyzer.py  test_comparative_theory_extractor.py  test_comparison_matrix_builder.py  test_config_characterization.py  test_datetime_utcnow_characterization.py  test_dependency_drift_cleanup.py  test_devops_hardening_characterization.py  test_direct_execution_service.py  test_e2e_research_flow.py  test_gemini_parsers.py  test_gemini_prompts.py  test_gemini_service.py  (+42 more)
(+380 files in other folders)
